--- a/css/12bool.css
+++ b/css/12bool.css
@@ -1,4 +1,4 @@
-/* general */
+/* row */
 
 .row{
     display: flex;
@@ -8,11 +8,11 @@
 }
 
 .row > .col{
-    flex: 1 1 auto;
+    flex-grow: 1;
 }
 
 .row > [class^="col"]{
-    flex: 0 0 100%;
+    flex: 0 0 auto;
 }
 
 /* display utils */
